# TP_8INF804

./: .gitignore  README.md  Resnet_Pretrained.ipynb  TP1.py  TP2.py  TP2_Basil.py  TP2_f.py  butterfly_classification_autoencoder.ipynb  pyproject.toml  resnet50_transfer_learning_sign_lang (1).ipynb  resnet50_transfer_learning_sign_lang.ipynb
images/TP2/: Echantillion1Mod2_301_seg.csv  Echantillion1Mod2_302_seg.csv  Echantillion1Mod2_303_seg.csv  Echantillion1Mod2_304_seg.csv  Echantillion1Mod2_305_seg.csv  Echantillion1Mod2_306_seg.csv  Echantillion1Mod2_316_seg.csv  Echantillion1Mod2_422_seg.csv  Echantillion1Mod2_471_seg.csv
